scripts/whoami/Namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: whoami
  annotations:
    ingress: enabled
  labels:
    ingress: enabled
