scripts/whoami/Deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami-container
        image: containous/whoami
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 750m
            memory: 256Mi
